--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "prettier-plugin-tailwindcss": "^0.1.8"
   },
   "scripts": {
-    "build": "tailwindcss -i src/styles.css -o public/output.css -w"
+    "build": "tailwindcss -i src/styles.css -o docs/output.css -w"
   },
   "keywords": [],
   "author": "",
